--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.4",
         "express": "*",
         "lowdb": "^1.0.0",
         "pug": "^2.0.3",
@@ -16,5 +17,4 @@
     "devDependencies": {
         "nodemon": "^1.19.1"
     }
-    
 }
