--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "express": "*",
         "lowdb": "^1.0.0",
         "md5": "^2.2.1",
+        "mongoose": "^5.6.0",
         "multer": "^1.4.1",
         "pug": "^2.0.3",
         "shortid": "^2.2.14"
